[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lost_and_found"
version = "0.1.0"
description = "Semplice sistema per la gestione degli oggetti smarriti"
readme = "README.md"
authors = [ {name = "Riccardoengin01"} ]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "pandas",
    "schedule",
    "tabulate"
]

[project.urls]
Homepage = "https://example.com"
